# ettsumailer

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: copilot-prototyping.md
docs/: BUILD.md  smtp-specification.md
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  imap_client.rs  main.rs
