[package]
name = "ettsumailer"
version = "0.1.0"
description = "A simple, modern, and easy-to-use mailer"
authors = ["ettsu"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
imap = "2.4.1"
native-tls = "0.2.11"
mail-parser = "0.9.0"
